@@ -1,5 +1,6 @@
 package cms.gov.madie.measure.services;
 
+import cms.gov.madie.measure.dto.PackageDto;
 import cms.gov.madie.measure.exceptions.*;
 import cms.gov.madie.measure.repositories.CqmMeasureRepository;
 import cms.gov.madie.measure.repositories.ExportRepository;
@@ -71,8 +72,7 @@ public class VersionService {
     return VersionValidationResult.VALID;
   }
 
-  public Measure createVersion(String id, String versionType, String username, String accessToken)
-      throws Exception {
+  public Measure createVersion(String id, String versionType, String username, String accessToken) {
     Measure measure = validateVersionOptions(id, versionType, username, accessToken);
 
     if (measure instanceof FhirMeasure) {
@@ -82,21 +82,31 @@ public class VersionService {
     return versionQdmMeasure(versionType, username, measure, accessToken);
   }
 
+  /**
+   * @param versionType - Major, Minor or Patch Version
+   * @param username - Harp User Name
+   * @param measure - Draft Measure
+   * @param accessToken - accessToken
+   * @return Versioned Measure Generates a measurePackage that includes ELM Warning Annotations ( if
+   *     available ) and also a publishableMeasurePackage which does not include ELM Warnings and
+   *     saves both copies of exportPackage for future exports
+   */
   private Measure versionQdmMeasure(
-      String versionType, String username, Measure measure, String accessToken) throws Exception {
+      String versionType, String username, Measure measure, String accessToken) {
     Measure upversionedMeasure = version(versionType, username, measure);
 
-    var measurePackage = exportService.getMeasureExport(upversionedMeasure, accessToken);
-
-    // convert to CqmMeasure
-    CqmMeasure cqmMeasure =
-        qdmPackageService.convertCqm((QdmMeasure) upversionedMeasure, accessToken);
+    PackageDto measurePackage =
+        exportService.getMeasureExport(upversionedMeasure, accessToken, true);
+    PackageDto publishableMeasurePackage =
+        exportService.getMeasureExport(upversionedMeasure, accessToken, false);
 
     String humanReadable =
         qdmPackageService.getHumanReadable(upversionedMeasure, username, accessToken);
     // save exports
-    savePackageData(upversionedMeasure, measurePackage.getExportPackage(), humanReadable, username);
-    //	save CqmMeasure
+    savePackageData(
+        upversionedMeasure, measurePackage, publishableMeasurePackage, humanReadable, username);
+    // convert to CqmMeasure and save it
+    CqmMeasure cqmMeasure = qdmPackageService.convertCqm(upversionedMeasure, accessToken);
     cqmMeasureRepository.save(cqmMeasure);
 
     return applyMeasureVersion(versionType, username, upversionedMeasure);
@@ -105,17 +115,16 @@ public class VersionService {
   /**
    * This method will first apply the version operation to the measure, fetch the FHIR bundle for
    * the measure, persist the measure bundle to the exports collection, and finally persist the
-   * upversioned measure to the database.
+   * up-versioned measure to the database.
    *
-   * @param versionType
-   * @param username
-   * @param accessToken
-   * @param measure
-   * @return
-   * @throws Exception
+   * @param versionType - Major, Minor or Patch Version
+   * @param username - Harp User Name
+   * @param accessToken - accessToken
+   * @param measure - Draft Measure
+   * @return Versioned Measure
    */
   private Measure versionFhirMeasure(
-      String versionType, String username, String accessToken, Measure measure) throws Exception {
+      String versionType, String username, String accessToken, Measure measure) {
     elmToJsonService.retrieveElmJson(measure, accessToken);
     Measure upversionedMeasure = version(versionType, username, measure);
     var measureBundle =
@@ -127,7 +136,7 @@ public class VersionService {
     return applyMeasureVersion(versionType, username, upversionedMeasure);
   }
 
-  private Measure version(String versionType, String username, Measure measure) throws Exception {
+  private Measure version(String versionType, String username, Measure measure) {
     Measure upversionedMeasure = measure.toBuilder().build();
     upversionedMeasure.getMeasureMetaData().setDraft(false);
     upversionedMeasure.setLastModifiedAt(Instant.now());
@@ -424,11 +433,16 @@ public class VersionService {
   }
 
   private void savePackageData(
-      Measure savedMeasure, byte[] packageData, String humanReadable, String username) {
+      Measure savedMeasure,
+      PackageDto packageData,
+      PackageDto publishableMeasurePackage,
+      String humanReadable,
+      String username) {
     Export export =
         Export.builder()
             .measureId(savedMeasure.getId())
-            .packageData(packageData)
+            .packageData(packageData.getExportPackage())
+            .publishablePackageData(publishableMeasurePackage.getExportPackage())
             .humanReadable(humanReadable)
             .build();
     Export savedExport = exportRepository.save(export);
@@ -472,7 +486,7 @@ public class VersionService {
         .sorted(
             Comparator.comparing(
                 TestCase::getCaseNumber, Comparator.nullsFirst(Comparator.reverseOrder())))
-        .collect(Collectors.toList())
+        .toList()
         .get(0)
         .getCaseNumber();
   }
